--- a/client/style.css
+++ b/client/style.css
@@ -1,10 +1,18 @@
 .title {
     text-align: center;
+    margin: 2rem;
 }
 
 form {
-    width: 50%;
+    width: 40%;
     margin: 0 auto;
+}
+
+@media only screen and (max-width: 800px) {
+    form {
+        width: 90%;
+        margin: 0 auto;
+    }
 }
 
 .loading {
@@ -14,4 +22,23 @@ form {
 .loading > img {
     margin: 2rem;
     width: 15%;
+}
+
+.quack {
+    border-radius: 10px;
+    background: rgba(0, 0, 255, 0.023);
+    padding: 2rem;
+    margin: 2rem;
+}
+
+.quacks-container {
+    width: 50%;
+    margin: 0 auto;
+}
+
+@media only screen and (max-width: 800px) {
+    .quacks-container {
+        width: 100%;
+        margin: 0 auto;
+    }
 }
